# upatch

./: CMakeLists.txt  Cargo.toml  README.md
test/redis/: 0001-Prevent-unauthenticated-client-from-easily-consuming.patch  redis.config
upatch-build/: Cargo.toml  build.rs
upatch-build/src/: main.rs
upatch-build/src/ffi/: mod.rs
upatch-build/src/tool/: os_str.rs
upatch-build/src/upatch/: build.rs  compiler.rs  link_message.rs
upatch-compile/: CMakeLists.txt
upatch-compile/ko/: CMakeLists.txt
upatch-diff/: CMakeLists.txt  create-diff-object.c  elf-compare.c  elf-compare.h  elf-correlate.c  elf-correlate.h  elf-create.c  elf-create.h  elf-insn.c  elf-insn.h  elf-resolve.c  elf-resolve.h  running-elf.c  running-elf.h  upatch-elf.c  upatch-elf.h
upatch-manage/: CMakeLists.txt  upatch-patch.c  upatch-ptrace.h
